--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,20 @@
+h1 {
+    margin: 0px;
+}
 
+h2 {
+    margin: 0px;
+    margin-bottom: 5px;
+}
+
+.detailText {
+    /* margin: 0px; */
+    font-size: 12px;
+}
+
+.centerText {
+    text-align: center;
+}
 
 body {
     background-color: white;
@@ -16,7 +32,7 @@ body {
 }
 
 .information {
-    /* padding: 10px; */
+    padding: 15px;
     text-align: left;
     background-color: rgba(128, 128, 128, 0.25);
     border-radius: 15px;
@@ -29,22 +45,30 @@ body {
     align-items: flex-start; */
 }
 
-.detailText {
-    margin: 10px;
-    padding: 10px;
-}
-
 .avatar {
     border-radius: 50%;
     max-width: 150px;
     float: left;
-    padding: 15px;
+    /* padding: 15px; */
+    padding-right: 15px;
 }
 
 .icon {
     max-width: 150px;
     float: left;
-    padding: 15px;
+    padding-right: 15px;
+}
+
+.badge {
+    padding: 0px 5px;
+}
+
+.navBar {
+    /* margin: 15px; */
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .buttonDrawer {
@@ -54,24 +78,37 @@ body {
     flex-wrap: wrap;
 }
 
-.pillButton {
+.pillButton a {
     display: inline-block;
     padding: 5px;
     margin: 5px;
     border-radius: 5px;
-    background-color: white;
+    /* background-color: white; */
     color: black;
     font-weight: bold;
     text-align: center;
     text-decoration: none;
     font-size: 14px;
 }
-.pillButton:hover {
-    background-color: blue;
+
+.pillButton a.active {
+    background-color: rgba(128, 128, 128, 0.25);
+
+}
+
+.pillButton a:hover {
+    background-color: #3D7AFF;
     color: white;
 }
 a {
     text-decoration: none;
+}
+
+.teaser {
+    margin: 60px;
+    font-size: 25px;
+    font-weight: bold;
+    text-align: center;
 }
 
 /* Dark Mode support */
@@ -80,8 +117,8 @@ a {
         background-color: black;
         color: white;
     }
-    .pillButton {
-        background-color: black;
+    .pillButton a {
+        /* background-color: black; */
         color: white;
     }
 }
