--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,14 +19,15 @@ h2 {
 body {
     background-color: white;
     color: black;
-    max-width: 960px;
+    max-width: 750px;
     margin: auto;
     /* Set font to prefer system font (and then system-like) */
     font-family: system-ui, Helvetica, Arial, Roboto, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .header {
-    padding: 15px;
+    /* padding: 15px; */
+    padding-top: 15px;
     text-align: center;
     /* font-size: 30px; */
 }
@@ -36,7 +37,7 @@ body {
     text-align: left;
     background-color: rgba(128, 128, 128, 0.25);
     border-radius: 15px;
-    max-width: 750px;
+    /* max-width: 750px; */
     margin: auto;
     overflow: auto;
     /* display: flex;
@@ -108,6 +109,44 @@ a {
     font-size: 25px;
     font-weight: bold;
     text-align: center;
+}
+
+.row {
+    padding: 7.5px;
+}
+/* Create two equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 50%;
+    padding-left: 7.5px;
+    padding-right: 7.5px;
+}
+
+.mainColumn {
+    width: 100%;
+    padding-left: 7.5px;
+    padding-right: 7.5px;
+}
+  
+/* Clear floats after the columns */
+.row:after {
+    box-sizing: border-box;
+    content: "";
+    display: table;
+    clear: both;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .column {
+        width: 100%;    
+        padding-top: 7.5px;
+        padding-bottom: 7.5px;
+    }
 }
 
 /* Dark Mode support */
