Add style for dashed unordered lists

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,15 @@ body {
     align-items: flex-start; */
 }
 
+ul {
+    list-style-type: none;
+    padding-left: 0.5em;
+}
+
+ul li:before{
+    content: "-";
+    margin-right: 0.5em;
+}
 .avatar {
     border-radius: 50%;
     max-width: 150px;
