--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,15 @@ h2 {
 .detailText {
     /* margin: 0px; */
     font-size: 12px;
+    line-height: 135%;
+}
+
+.subtitleText {
+    /* margin: 0px; */
+    margin-top: -5px;
+    margin-bottom: 5px;
+    font-size: 14px;
+    font-style: italic;
 }
 
 .centerText {
@@ -55,6 +64,7 @@ ul li:before{
     content: "-";
     margin-right: 0.5em;
 }
+
 .avatar {
     border-radius: 50%;
     max-width: 150px;
@@ -66,6 +76,13 @@ ul li:before{
     max-width: 150px;
     float: left;
     padding-right: 15px;
+}
+
+.preview {
+    max-width: 150px;
+    float: left;
+    margin-right: 15px;
+    border-radius: 10px;
 }
 
 .badge {
@@ -81,10 +98,44 @@ ul li:before{
 }
 
 .buttonDrawer {
-    margin: 10px;
+    /* margin: 10px; */
+    margin-top: 10px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+}
+
+.labelDrawer {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+}
+
+.sharedDrawer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.pillLabel {
+    display: inline-block;
+    padding: 5px;
+    margin: 5px;
+    
+    color: rgba(0, 0, 0, 0.65);
+    border-style: solid;
+    border-width: thin;
+    border-radius: 5px;
+    border-color: rgba(0, 0, 0, 0.35);
+
+    font-size: 10px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+
+    text-align: center;
+    vertical-align: middle;
 }
 
 .pillButton a {
@@ -167,5 +218,9 @@ a {
     .pillButton a {
         /* background-color: black; */
         color: white;
+    }
+    .pillLabel {
+        color: rgba(255, 255, 255, 0.65);
+        border-color: rgba(255, 255, 255, 0.35);
     }
 }
