--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,24 @@ h2 {
     font-style: italic;
 }
 
+ul {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+dt {
+    font-weight: bold;
+}
+
+dl {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+dd {
+    margin-left: 2em;
+}
+
 .centerText {
     text-align: center;
 }
@@ -57,12 +75,12 @@ body {
 
 ul {
     list-style-type: none;
-    padding-left: 0.5em;
+    padding-left: 0.75em;
 }
 
 ul li:before{
     content: "-";
-    margin-right: 0.5em;
+    margin-right: 0.75em;
 }
 
 .avatar {
