--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,13 +171,15 @@ ul li:before{
 
 .pillButton a.active {
     background-color: rgba(128, 128, 128, 0.25);
-
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 .pillButton a:hover {
     background-color: #3D7AFF;
     color: white;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5) inset;
 }
+
 a {
     text-decoration: none;
 }
