--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,6 +220,13 @@ a {
     box-sizing: border-box;
 }
 
+a {
+    color: black;
+}
+a:hover {
+    color: blue;
+}
+
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
     .column {
@@ -242,5 +249,9 @@ a {
     .pillLabel {
         color: rgba(255, 255, 255, 0.65);
         border-color: rgba(255, 255, 255, 0.35);
+    }
+
+    a {
+        color: white;
     }
 }
