--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,11 @@ h2 {
     margin-bottom: 5px;
 }
 
+h3 {
+    margin: 0px;
+    margin-bottom: 5px;
+}
+
 .detailText {
     /* margin: 0px; */
     font-size: 12px;
@@ -88,12 +93,29 @@ ul li:before{
     max-width: 150px;
     float: left;
     margin-right: 15px;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.avatarFloat {
+    /* border-radius: 50%; */
+    max-width: 150px;
+    float: left;
+    margin-right: 15px;
+    /* box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5); */
 }
 
 .icon {
     max-width: 150px;
     float: left;
     padding-right: 15px;
+}
+
+.miniicon {
+    max-width: 75px;
+    max-height: 75px;
+    float: left;
+    padding: 5px;
+    /* padding-right: 15px; */
 }
 
 .preview {
@@ -136,6 +158,14 @@ ul li:before{
     justify-content: space-between;
 }
 
+.centerDrawer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
 .pillLabel {
     display: inline-block;
     padding: 5px;
@@ -167,6 +197,8 @@ ul li:before{
     text-align: center;
     text-decoration: none;
     font-size: 14px;
+
+    align-content: center;
 }
 
 .pillButton a.active {
@@ -233,6 +265,10 @@ a:hover {
         width: 100%;    
         padding-top: 7.5px;
         padding-bottom: 7.5px;
+    }
+
+    .row {
+        padding-bottom: 0px;
     }
 }
 
